--- a/src/app/order-summary/order-summary.component.css
+++ b/src/app/order-summary/order-summary.component.css
@@ -29,6 +29,10 @@
   
   /* Style for the card body */
   .card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 10px;
   }
   
