--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,35 +1,36 @@
-/* header.component.css */
 body{
     padding: 0%;
     margin: 0%;
 }
 header {
-    background-color: #333; /* Background color for the header */
-    color: #fff; /* Text color */
-    padding: 10px ; /* Top and bottom padding */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    background-color: #ddf8ff;
+    height: 40px;
+    color: #fff;
+    padding: 10px ; 
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
   
   nav {
     display: flex;
     gap: 20px;
-    justify-content: flex-start; /* Align navigation links to the right */
+    justify-content: flex-start; 
   }
   
   nav a {
-    color: #fff; /* Text color for the navigation links */
-    text-decoration: none; /* Remove underline */
-    margin-left: 20px; /* Spacing between links */
-    transition: color 0.3s; /* Smooth color transition on hover */
+    color: #000000; 
+    text-decoration: none; 
+    margin-left: 20px; 
+    transition: color 0.3s; 
   
-    /* Optional: Add hover effect */
     &:hover {
-      color: #ff9900; /* Change color on hover */
+      color: #ff9900; 
     }
   }
-  
-  /* Style for the active link */
+
   nav a.active {
-    font-weight: bold; /* Make the active link bold */
+    font-weight: bold; 
   }
   
