--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,6 +1,4 @@
-/* Add these styles to your component's CSS file */
 
-/* Style for the container */
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -8,8 +6,7 @@
     align-items: center;
     margin-top: 20px;
   }
-  
-  /* Style for the movie card */
+
   .movie-card {
     max-width: 300px;
     border: 1px solid #eaeaea;
@@ -19,15 +16,18 @@
     margin: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
-  /* Style for the card image */
+
+  .movie-card:hover{
+    transform: scale(1.05);
+  }
+
   .card-img-top {
     width: 100%;
     height: 300px;
     border-radius: 8px 8px 0 0;
   }
   
-  /* Style for the card body */
+
   .card-body {
     display: flex;
     flex-direction: column;
@@ -35,21 +35,19 @@
     justify-content: center;
     padding: 10px;
   }
-  
-  /* Style for card title */
+
   .card-title {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 5px;
   }
-  
-  /* Style for other card text */
+
   .card-text {
     font-size: 16px;
     margin-bottom: 5px;
   }
   
-  /* Style for the "Add to Cart" button */
+
   .btn-danger {
     background-color: #fd2222;
     color: #fff;
@@ -75,11 +73,9 @@
     padding: 5px 10px;
     cursor: pointer;
     font-weight: bold;
-    transition: background-color 0.2s;
     margin-top: "30px";
     padding: 10px;
     margin: auto;
-    align-items: center;
   }
 
   .btnOrder:hover{
@@ -91,4 +87,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .totalPrice{
+    text-align: center;
+  }
+
+  .checkoutdiV{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .btnDiv{
+    margin-top: 5px;
   }
