--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,9 @@
 <div class="parent">
 
     <h1>Cart</h1>
-    <div *ngIf="checkLength()">
+    <div *ngIf="checkLength()" class="checkoutdiV">
         <button (click)="placeOrder()" class="btnOrder">Checkout</button>
+        <p *ngIf="getPrice()" class="totalPrice" ><strong>Total Price : </strong>{{totalPrice}}</p>
     </div>
     <div class="container mt-5">
         <div class="col" *ngFor="let product of productsInCart">
@@ -12,6 +13,7 @@
                     <p class="card-title"><strong>Title:</strong>{{ product.Name }}</p>
                     <p class="card-text"><strong>Weight:</strong> {{ product.Weight }}</p>
                     <p class="card-text"><strong>Price:</strong> {{ product.Price }}</p>
+                    <p class="card-text"><strong>Quantity:</strong> {{ product.quantity}}</p>
                     <button (click)="removeItem(product)" class="btn btn-danger">Remove</button>
                     <app-toast-message *ngIf="toastMessage" [message]="toastMessage"></app-toast-message>
                 </div>
