--- a/src/app/order-summary/order-summary.component.css
+++ b/src/app/order-summary/order-summary.component.css
@@ -1,6 +1,3 @@
-/* Add these styles to your component's CSS file */
-
-/* Style for the container */
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -8,8 +5,7 @@
     align-items: center;
     margin-top: 20px;
   }
-  
-  /* Style for the movie card */
+
   .movie-card {
     max-width: 300px;
     border: 1px solid #eaeaea;
@@ -19,15 +15,17 @@
     margin: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
-  /* Style for the card image */
+
+  .movie-card:hover{
+    transform: scale(1.05);
+  }
+
   .card-img-top {
     width: 100%;
     height: 300px;
     border-radius: 8px 8px 0 0;
   }
-  
-  /* Style for the card body */
+
   .card-body {
     display: flex;
     flex-direction: column;
@@ -35,8 +33,7 @@
     justify-content: center;
     padding: 10px;
   }
-  
-  /* Style for card title */
+
   .card-title {
     font-size: 18px;
     font-weight: bold;
@@ -46,13 +43,12 @@
   h1{
     text-align: center;
   }
-  /* Style for other card text */
+
   .card-text {
     font-size: 16px;
     margin-bottom: 5px;
   }
   
-  /* Style for the "Add to Cart" button */
   .btn-danger {
     background-color: #fd2222;
     color: #fff;
@@ -90,4 +86,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .btnDiv{
+    margin-top: 5px;
   }
